less example to use pug

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "ramapo-web",
   "version": "0.0.1",
   "author": "Scott Frees <scott.frees@gmail.com> (http://scottfrees.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "pug": "2.0.0-rc.4"
+  }
 }
